--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -6,10 +6,11 @@ that there is no strong evidence for mass-dependent heating in low-mass
 \kepler\ dwarfs: the velocity dispersions of K and M dwarfs, whose
 main-sequence lifetimes are longer than around 11 Gyrs, do not appear to
 increase with decreasing mass.
-Although {\it vertical} velocity, \vz, is the quantity that most strongly
-traces time-dependent orbital heating in the disc of the Galaxy, most stars
-with measured rotation periods do not yet have radial velocities, so we used
-velocity in the direction of Galactic latitude, \vb\, as a proxy for \vz.
+Although {\it vertical} velocity, \vz, is a quantity that has been
+demonstrated to trace time-dependent orbital heating in the disc of the
+Galaxy, most stars with measured rotation periods do not yet have radial
+velocities, so we used velocity in the direction of Galactic latitude, \vb\,
+as a proxy for \vz.
 Using stars in the GUMS simulation, we showed that using \vb\ as a proxy for
 \vz\ introduces an additional velocity dispersion, which increases with
 increasing Galactic latitude.
@@ -54,8 +55,8 @@ from an old regime where periods increase with increasing mass, however more
 data are needed to provide a conclusive result.
 The velocity dispersions of stars increase smoothly across the rotation period
 gap, indicating that the gap does not separate two distinct populations.
-Finally, we used kinematics to reveal a population of synchronized binaries
-with rotation periods less than around 10 days.
+Finally, we used kinematics to indicate that there is a population of
+synchronized binaries with rotation periods less than around 10 days.
 
 % We outlined a number of scenarios which could provide alternative
 % explanations for these observations, including incorrect dust corrections for
