--- a/paper/results.tex
+++ b/paper/results.tex
@@ -210,8 +210,8 @@ their rotation period-\teff\ relation flattens out over time and eventually
 inverts.
 
 The results shown in figure \ref{fig:vplot} indicate that stars of spectral
-type ranging from late G to late K follow a braking law that changes over
-time.
+type ranging from late G to late K ($\sim$5500-3500 K) follow a braking law
+that changes over time.
 In particular, the relationship between rotation period and effective
 temperature appears to flatten out and eventually invert.
 These results provide further evidence for `stalled' rotational evolution of K
@@ -283,17 +283,19 @@ produces the gap.
     period gap, which only extends up to temperatures of $\sim$4600 K.
     Bottom: the velocities of these groups of stars (in the direction of
     Galactic latitude, $b$) are shown as a function of rotation period.
+    The black line indicates the velocity standard deviation as a function of
+    period.
 }
   \centering
     \includegraphics[width=1\textwidth]{gap}
 \label{fig:gap}
 \end{figure}
 
-Figure \ref{fig:gap} shows the velocity dispersions of stars in the \mct\
-sample, with stars subdivided into three groups: those that rotate more
-quickly than the major rotation period distribution (green triangles), those
-with rotation periods shorter than the gap (orange squares), and those with
-rotation periods longer than the gap (blue circles).
+The bottom panel of figure \ref{fig:gap} shows the velocity dispersions of
+stars in the \mct\ sample, with stars subdivided into three groups: those that
+rotate more quickly than the major rotation period distribution (green
+triangles), those with rotation periods shorter than the gap (orange squares),
+and those with rotation periods longer than the gap (blue circles).
 Stars were separated into these three groups using \citet{angus2019}
 gyrochronology models, according to the scheme shown in the legend.
 Only stars cooler than 5000 K are included in the bottom panel in order to
