--- a/paper/results.tex
+++ b/paper/results.tex
@@ -149,7 +149,7 @@ similar color in figure \ref{fig:vplot} are similar ages.
     These gyrochrones do not appear to reflect the evolution of field stars at
     long rotation periods/old ages: they do not trace lines of constant
     velocity dispersion.
-    Gyrochrones are plotted at 0.5, 1, 1.5, 2, 2.5, 4 and 4.57 Gyrs in both top
+    Gyrochrones are plotted at 0.5, 1, 1.5, 2, 2.5, 4 and 4.57 Gyr in both top
     and bottom panels.
     Bottom: Same as top panel with rotation period vs {\it mass}
     \citep[from the Kepler Input Catalog][]{brown2011}.
@@ -168,10 +168,11 @@ similar color in figure \ref{fig:vplot} are similar ages.
 Overall, figure \ref{fig:vplot} shows that velocity dispersion increases with
 rotation period across all temperatures, implying that rotation period
 increases with age as expected.
+This result is insensitive to the choice of bin position and size.
 Black lines show gyrochrones from the \citet{angus2019} gyrochronology model,
 which projects the rotation-color relation of Praesepe to longer rotation
 periods over time.
-These gyrochrones are plotted at 0.5, 1, 1.5, 2, 2.5, 4 and 4.57 Gyrs.
+These gyrochrones are plotted at 0.5, 1, 1.5, 2, 2.5, 4 and 4.57 Gyr.
 At the youngest ages, these gyrochrones describe the data well: the palest
 yellow (youngest) stars with the lowest velocity dispersions all fall close to
 the 0.5 Gyr gyrochrone.
@@ -181,7 +182,7 @@ the 0.5 Gyr gyrochrone.
 % and \teff\ flattens out, until eventually rotation period {\it decreases} with
 % decreasing effective temperature at a given age.
 However, although the 0.5 Gyr and 1 Gyr gyrochrones also trace constant
-velocity dispersion/age among the field stars, by 1.5 Gyrs the gyrochrones
+velocity dispersion/age among the field stars, by 1.5 Gyr the gyrochrones
 start to {\it cross} different velocity dispersion regimes.
 For example, the 1.5 Gyr gyrochrone lies on top of stars with velocity
 dispersions of around 10-11 kms$^{-1}$ at 5000-5500K and stars with $\sim$15
@@ -201,7 +202,7 @@ The bottom panel of figure \ref{fig:vplot} shows velocity dispersion as a
 function of rotation period and {\it mass}, obtained from the Kepler Input
 Catalog \citep{brown2011}, with gyrochrones from the \citep{spada2019}
 gyrochronology model shown as white lines.
-These gyrochrones are also plotted at 0.5, 1, 1.5, 2, 2.5, 4 and 4.57 Gyrs.
+These gyrochrones are also plotted at 0.5, 1, 1.5, 2, 2.5, 4 and 4.57 Gyr.
 Although these models do not trace lines of constant velocity dispersion at
 0.5 and 1 Gyr, they do appear to reproduce trends in the data at ages of 1.5
 Gyr and older.
@@ -364,7 +365,7 @@ evidence for mass-dependent heating has previously been found in M dwarfs
 
 To investigate whether mass-dependent heating could be acting on the \kepler\
 sample, we selected late K and M dwarfs observed by both \kepler\ and \gaia,
-whose MS lifetimes exceed around 11 Gyrs and are therefore representative of
+whose MS lifetimes exceed around 11 Gyr and are therefore representative of
 the initial mass function.
 We could not perform this analysis on the \mct\ sample, because it only
 includes stars with {\it detectable} rotation periods, and since lower-mass
@@ -438,7 +439,8 @@ The relationship between \vz\ and \vb\ is close to 1:1, with \vz\ greater than
 \vb\ by around 4.5 kms$^{-1}$ at $b=5$, due to the Sun's own motion in the
 Galaxy.
 We subtracted this offset and examined the residuals of the \vz\ -- \vb\
-relationship to investigate the variance as a function of Galactic latitude.
+relationship to investigate the variance as a function of Galactic latitude
+(shown in figure \ref{fig:vb_vz}).
 We found that \vb\ is drawn from a heavy-tailed distribution, centered on \vz,
 with standard deviation increasing with $b$ (see figure \ref{fig:vb_vz}).
 The standard deviation of \vz-\vb\ was around 3kms$^{-1}$ at $b \sim 5^\circ
@@ -515,9 +517,9 @@ relationship will be needed to calculate absolute ages.
 % For example, the velocity distributions could be modeled as a mixture of
 % Gaussians in order to account for the additional velocity dispersion caused by
 % the \vz-\vb\ transformation.
-The RVs of most of these stars will become available in \Gaia\ DR3, allowing
-calculations of \vz, which can be used to calculate more reliable ages via an
-AVR and suitable modeling of the selection function.
+% The RVs of most of these stars will become available in \Gaia\ DR3, allowing
+% calculations of \vz, which can be used to calculate more reliable ages via an
+% AVR and suitable modeling of the selection function.
 
 % We then selected groups of stars within different gyrochronal age ranges and
 % calculated the standard deviation of \vb\ velocities (\sigmavb), as a function
