--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -65,7 +65,12 @@
 
 \newcommand{\amnh}{1}
 \newcommand{\cca}{2}
-\newcommand{\hawaii}{3}
+\newcommand{\columbia}{3}
+\newcommand{\cfa}{4}
+\newcommand{\dartmouth}{5}
+\newcommand{\hawaii}{6}
+\newcommand{\cuny}{7}
+\newcommand{\carnegie}{8}
 
 \newcommand{\sd}{{\tt stardate}}
 \newcommand{\gcolor}{$G_{BP} - G_{RP}$}
@@ -81,26 +86,32 @@
 \title{Exploring the evolution of stellar rotation using kinematics}
 
 \author{%
-    Ruth Angus,
-    Angus Beane,
-    Adrian Price-Whelan,
-    Jason Curtis,
-    Elisabeth Newton,
-    Jennifer van Saders,
-    Lauren Anderson,
-    Rocio Kiman,
-    Travis Berger,
-    Dan Foreman-Mackey, \etal}
-    % Megan Bedell,
-    % Jackie Faherty,
-    % Melissa Ness}
+    Ruth Angus$^{1, 2, 3}$,
+    Angus Beane$^4$,
+    Adrian Price-Whelan$^2$,
+    Jason Curtis$^1$,
+    Elisabeth Newton$^5$,
+    Jennifer van Saders$^6$,
+    Rocio Kiman$7$,
+    Dan Foreman-Mackey$2$,
+    Lucy Lu$^3$,
+    Travis Berger$^6$,
+    Lauren Anderson$^8$}
 
-% \altaffiltext{\amnh}{American Museum of Natural History, Central Park West,
-% Manhattan, NY, USA}
-% \altaffiltext{\cca}{Center for Computational Astrophysics, Flatiron Institute,
-% 162 5th Avenue, Manhattan, NY, USA}
-% \altaffiltext{\hawaii}{Institute for Astronomy, University of Hawai'i at
-% M\={a}noa, Honolulu, HI, USA}
+\altaffiltext{\amnh}{American Museum of Natural History, Central Park West,
+Manhattan, NY, USA}
+\altaffiltext{\cca}{Center for Computational Astrophysics, Flatiron Institute,
+162 5th Avenue, Manhattan, NY, USA}
+\altaffiltext{\columbia}{Department of Astronomy, Columbia
+University, Manhattan, NY, USA}
+\altaffiltext{\cfa}{Harvard-Smithsonian Center for Astrophysics, Cambridge,
+MA, USA}
+\altaffiltext{\cuny}{Department of physics, CUNY Graduate Center, City
+University of New York, Manhattan, NY, USA}
+\altaffiltext{\hawaii}{Institute for Astronomy, University of Hawai'i at
+M\={a}noa, Honolulu, HI, USA}
+\altaffiltext{\dartmouth}{Dartmouth College, Hanover, NH, USA}
+\altaffiltext{\carnegie}{Dartmouth College, Hanover, NH, USA}
 
 % Still to do: deredden before calculating ages.
 
