--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -92,8 +92,8 @@
     Jason Curtis$^1$,
     Elisabeth Newton$^5$,
     Jennifer van Saders$^6$,
-    Rocio Kiman$7$,
-    Dan Foreman-Mackey$2$,
+    Rocio Kiman$^7$,
+    Dan Foreman-Mackey$^2$,
     Lucy Lu$^3$,
     Travis Berger$^6$,
     Lauren Anderson$^8$}
@@ -111,7 +111,7 @@ University of New York, Manhattan, NY, USA}
 \altaffiltext{\hawaii}{Institute for Astronomy, University of Hawai'i at
 M\={a}noa, Honolulu, HI, USA}
 \altaffiltext{\dartmouth}{Dartmouth College, Hanover, NH, USA}
-\altaffiltext{\carnegie}{Dartmouth College, Hanover, NH, USA}
+\altaffiltext{\carnegie}{Carnegie Observatories, Pasadena, CA, USA}
 
 % Still to do: deredden before calculating ages.
 
