--- a/paper/results.tex
+++ b/paper/results.tex
@@ -330,8 +330,8 @@ likely to be synchronized binaries.
 Figure \ref{fig:gap} indicates that there is an increased probability of stars
 with rotation periods less than $\sim$10 days being synchronized binaries.
 This result is in agreement with a recent study which found that a large
-fraction of visual binaries were rapid rotators, and the probability of a star
-being a synchronized binary system substantially increased below rotation
+fraction of photometric binaries were rapid rotators, and the probability of a
+star being a synchronized binary system substantially increased below rotation
 periods of around 7 days \citep{simonian2019}.
 
 \subsection{Validating \vb\ dispersion as an age proxy}
@@ -374,7 +374,7 @@ correlation.
 We selected all \kepler\ targets with dereddened \gaia\ \gcolor\ colors
 greater than 1.2 (corresponding to an effective temperature $\lesssim$
 4800 K) and absolute \gaia\ $G$-band magnitudes $<$ 4.
-We also eliminated visual binaries by removing stars above a 6th order
+We also eliminated photometric binaries by removing stars above a 6th order
 polynomial, fit to the MS on the \gaia\ CMD (similar to the one shown in
 figure \ref{fig:age_gradient}).
 We then applied the quality cuts described above in section
