moving notebooks to figure_codez and a couple of Jason's comments

--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -1,8 +1,8 @@
 % Word limit: 250
 
 The rotational evolution of cool dwarfs is poorly constrained after $\sim$1-2
-billion years due to a lack of precise ages and rotation periods for old
-main-sequence stars.
+Gyr due to a lack of precise ages and rotation periods for old main-sequence
+stars.
 % However, recent evidence suggests that the relationship between rotation
 % period and color/temperature/mass does not remain constant over large
 % timescales, contradicting a long-held assumption that underlies many
@@ -12,8 +12,9 @@ an age proxy, to reveal their rotational evolution and demonstrate that
 kinematics could be a useful tool for calibrating gyrochronology.
 % At ages less than $\sim$1 Gyr we find that a gyrochronology model, calibrated
 % to the Praesepe cluster, accurately predicts the relative ages of stars.
-We find that the period-\teff\ relationship of the Praesepe cluster does not
-apply to stars older than around 1 Gyr.
+We find that a gyrochronology model, calibrated to fit the period-\teff\
+relationship of the Praesepe cluster, does not apply to stars older than
+around 1 Gyr.
 % : a polynomial gyrochronology model, fit
 % to Praesepe stars, under-predicts the ages of late K dwarfs in the field.
 Although late-K dwarfs spin more slowly than early-K and late-G dwarfs when
