--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -1277,6 +1277,22 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{janes2011,
+       author = {{Janes}, Kenneth A. and {Hoq}, Sadia},
+        title = "{A Quantitative Analysis of Distant Open Clusters}",
+      journal = {\aj},
+     keywords = {Hertzsprung-Russell and C-M diagrams, open clusters and associations: general, open clusters and associations: individual: Berkeley 19 Berkeley 44 King 25 NGC 6802 NGC 6827 Berkeley 52 Berkeley 56 NGC 7142 NGC 7245 King 9, techniques: photometric},
+         year = 2011,
+        month = mar,
+       volume = {141},
+       number = {3},
+          eid = {92},
+        pages = {92},
+          doi = {10.1088/0004-6256/141/3/92},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2011AJ....141...92J},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @article{astropy2018,
     Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
