--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -31,8 +31,8 @@ For example, the early-to-mid M dwarfs in the $\sim$ 650 Myr Praesepe cluster
 spin more slowly than the G dwarfs.
 In theory this is because lower-mass stars have deeper convections zones which
 generate stronger magnetic fields and more efficient magnetic braking.
-However, in the 1.1 Gyr NGC 6811 cluster, late-K dwarfs rotate at the {\it
-same} rate as early-K dwarfs \citep{curtis2019}.
+However, in the 1.1 Gyr NGC 6811 cluster \citep{janes2011}, late-K dwarfs
+rotate at the {\it same} rate as early-K dwarfs \citep{curtis2019}.
 In other words, convection zone depth cannot be the only variable that affects
 stellar spin-down rate.
 New semi-empirical models that vary the rate of angular momentum
