--- a/paper/method.tex
+++ b/paper/method.tex
@@ -77,6 +77,16 @@ relation under-predicts the ages of low-mass stars.
 Given that lower-mass stars stay active for longer than higher-mass stars
 \citep[\eg][]{west2011}, and are therefore more likely to have measurable
 rotation periods at old ages, the latter scenario seems more likely.
+An alternative explanation could be that the rotation periods of the oldest
+early M dwarfs are so long that they are not measurable with Kepler data.
+Ground-based rotation period measurements of mid and late M dwarfs
+indicate that there is an upper limit to the rotation periods of M
+dwarfs of around 140 days \citep{newton2017}, which is much longer than the
+longest rotation periods measured in the \mct\ sample (around 70 days).
+For this reason, it is likely that slowly rotating M dwarfs are missing from
+the \mct\ sample and this could be another reason for the lack of old M
+dwarfs.
+
 The \citet{angus2019} gyrochronology relation is a simple polynomial model,
 fit to the period-color relation of Praesepe.
 Since this relation predicts that the oldest stars in the \mct\ sample are
