comments about mass plot

--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -1293,6 +1293,22 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{berger2020,
+       author = {{Berger}, Travis A. and {Huber}, Daniel and {van Saders}, Jennifer L. and
+         {Gaidos}, Eric and {Tayar}, Jamie and {Kraus}, Adam L.},
+        title = "{The $Gaia$-$Kepler$ Stellar Properties Catalog I: Homogeneous Fundamental Properties for 186,000 $Kepler$ Stars}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = 2020,
+        month = jan,
+          eid = {arXiv:2001.07737},
+        pages = {arXiv:2001.07737},
+archivePrefix = {arXiv},
+       eprint = {2001.07737},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv200107737B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 @article{astropy2018,
     Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
