--- a/paper/results.tex
+++ b/paper/results.tex
@@ -152,7 +152,7 @@ similar color in figure \ref{fig:vplot} are similar ages.
     Gyrochrones are plotted at 0.5, 1, 1.5, 2, 2.5, 4 and 4.57 Gyr in both top
     and bottom panels.
     Bottom: Same as top panel with rotation period vs {\it mass}
-    \citep[from the Kepler Input Catalog][]{brown2011}.
+    \citep[from][]{berger2020}.
     White lines show gyrochrones from a model that includes mass and
     age-dependent angular momentum transport between the core and envelope
     \citep{spada2019}.
@@ -199,16 +199,16 @@ temperature than these Praesepe-based models.
 % as Praesepe and the Hyades.
 
 The bottom panel of figure \ref{fig:vplot} shows velocity dispersion as a
-function of rotation period and {\it mass}, obtained from the Kepler Input
-Catalog \citep{brown2011}, with gyrochrones from the \citep{spada2019}
-gyrochronology model shown as white lines.
+function of rotation period and {\it mass}, \citep[from][]{berger2020}, with
+gyrochrones from the \citep{spada2019} gyrochronology model shown as white
+lines.
+Each point is assigned the same color as in the top panel, so bin outlines
+appear smeared-out because temperature does not convert directly to mass.
 These gyrochrones are also plotted at 0.5, 1, 1.5, 2, 2.5, 4 and 4.57 Gyr.
-Although these models do not trace lines of constant velocity dispersion at
-0.5 and 1 Gyr, they do appear to reproduce trends in the data at ages of 1.5
-Gyr and older.
-The \citet{spada2019} models appear to qualitatively agree with the data:
-their rotation period-\teff\ relation flattens out over time and eventually
-inverts.
+The \citet{spada2019} models trace lines of constant velocity dispersion, and
+reproduce the trends in the data at all ages.
+These models qualitatively agree with the data: the rotation period-\teff/mass
+relation flattens out over time and eventually inverts.
 
 The results shown in figure \ref{fig:vplot} indicate that stars of spectral
 type ranging from late G to late K ($\sim$5500-3500 K) follow a braking law
