some small edits

--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -36,7 +36,7 @@ which indicate that K dwarfs experience an epoch of stalled spin-down.
 We find that the oldest \kepler\ stars with measured rotation periods are
 late-K and early-M dwarfs, indicating that these stars maintain spotted
 surfaces and stay magnetically active longer than more massive stars.
-Finally, based on their kinematics, we find that many rapidly rotating
+Finally, based on their kinematics, we confirm that many rapidly rotating
 K-dwarfs are likely to be synchronized binaries.
 % Firstly, we
 % find no evidence for mass-dependent heating in a sample of K and M dwarfs in
