--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -774,26 +774,6 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{davenport2017,
-       author = {{Davenport}, James R.~A.},
-        title = "{Rotating Stars from Kepler Observed with Gaia DR1}",
-      journal = {\apj},
-     keywords = {stars: general, stars: kinematics and dynamics, stars: rotation, Astrophysics - Solar and Stellar Astrophysics},
-         year = "2017",
-        month = "Jan",
-       volume = {835},
-       number = {1},
-          eid = {16},
-        pages = {16},
-          doi = {10.3847/1538-4357/835/1/16},
-archivePrefix = {arXiv},
-       eprint = {1610.08563},
- primaryClass = {astro-ph.SR},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2017ApJ...835...16D},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-
 @ARTICLE{mcquillan2013,
        author = {{McQuillan}, A. and {Aigrain}, S. and {Mazeh}, T.},
         title = "{Measuring the rotation period distribution of field M dwarfs with Kepler}",
@@ -1238,45 +1218,6 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{reinhold2019,
-       author = {{Reinhold}, Timo and {Bell}, Keaton J. and {Kuszlewicz}, James and
-         {Hekker}, Saskia and {Shapiro}, Alexander I.},
-        title = "{Transition from spot to faculae domination. An alternate explanation for the dearth of intermediate Kepler rotation periods}",
-      journal = {\aap},
-     keywords = {stars: activity, stars: rotation, Astrophysics - Solar and Stellar Astrophysics},
-         year = "2019",
-        month = "Jan",
-       volume = {621},
-          eid = {A21},
-        pages = {A21},
-          doi = {10.1051/0004-6361/201833754},
-archivePrefix = {arXiv},
-       eprint = {1810.11250},
- primaryClass = {astro-ph.SR},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2019A&A...621A..21R},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@ARTICLE{simonian2019,
-       author = {{Simonian}, Gregory V.~A. and {Pinsonneault}, Marc H. and
-         {Terndrup}, Donald M.},
-        title = "{Rapid Rotation in the Kepler Field: Not a Single Star Phenomenon}",
-      journal = {\apj},
-     keywords = {binaries: close, stars: late-type, stars: rotation, Astrophysics - Solar and Stellar Astrophysics},
-         year = "2019",
-        month = "Feb",
-       volume = {871},
-       number = {2},
-          eid = {174},
-        pages = {174},
-          doi = {10.3847/1538-4357/aaf97c},
-archivePrefix = {arXiv},
-       eprint = {1809.02141},
- primaryClass = {astro-ph.SR},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...871..174S},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
 @ARTICLE{janes2011,
        author = {{Janes}, Kenneth A. and {Hoq}, Sadia},
         title = "{A Quantitative Analysis of Distant Open Clusters}",
@@ -1309,6 +1250,161 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv200107737B},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{boyajian2012,
+       author = {{Boyajian}, Tabetha S. and {von Braun}, Kaspar and {van Belle}, Gerard and
+         {McAlister}, Harold A. and {ten Brummelaar}, Theo A. and
+         {Kane}, Stephen R. and {Muirhead}, Philip S. and {Jones}, Jeremy and
+         {White}, Russel and {Schaefer}, Gail and {Ciardi}, David and
+         {Henry}, Todd and {L{\'o}pez-Morales}, Mercedes and {Ridgway}, Stephen and
+         {Gies}, Douglas and {Jao}, Wei-Chun and {Rojas-Ayala}, B{\'a}rbara and
+         {Parks}, J. Robert and {Sturmann}, Laszlo and {Sturmann}, Judit and
+         {Turner}, Nils H. and {Farrington}, Chris and {Goldfinger}, P.~J. and
+         {Berger}, David H.},
+        title = "{Stellar Diameters and Temperatures. II. Main-sequence K- and M-stars}",
+      journal = {\apj},
+     keywords = {Hertzsprung-Russell and C-M diagrams, infrared: stars, planetary systems, stars: atmospheres, stars: fundamental parameters, stars: general, stars: late-type, stars: low-mass, techniques: high angular resolution, techniques: interferometric, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2012,
+        month = oct,
+       volume = {757},
+       number = {2},
+          eid = {112},
+        pages = {112},
+          doi = {10.1088/0004-637X/757/2/112},
+archivePrefix = {arXiv},
+       eprint = {1208.2431},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2012ApJ...757..112B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{mann2015,
+       author = {{Mann}, Andrew W. and {Feiden}, Gregory A. and {Gaidos}, Eric and
+         {Boyajian}, Tabetha and {von Braun}, Kaspar},
+        title = "{How to Constrain Your M Dwarf: Measuring Effective Temperature, Bolometric Luminosity, Mass, and Radius}",
+      journal = {\apj},
+     keywords = {planetary systems, stars: abundances, stars: fundamental parameters, stars: late-type, stars: low-mass, stars: statistics, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2015,
+        month = may,
+       volume = {804},
+       number = {1},
+          eid = {64},
+        pages = {64},
+          doi = {10.1088/0004-637X/804/1/64},
+archivePrefix = {arXiv},
+       eprint = {1501.01635},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015ApJ...804...64M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{brewer2016,
+       author = {{Brewer}, John M. and {Fischer}, Debra A. and {Valenti}, Jeff A. and
+         {Piskunov}, Nikolai},
+        title = "{Spectral Properties of Cool Stars: Extended Abundance Analysis of 1,617 Planet-search Stars}",
+      journal = {\apjs},
+     keywords = {catalogs, methods: data analysis, stars: abundances, stars: fundamental parameters, stars: solar type, techniques: spectroscopic, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2016,
+        month = aug,
+       volume = {225},
+       number = {2},
+          eid = {32},
+        pages = {32},
+          doi = {10.3847/0067-0049/225/2/32},
+archivePrefix = {arXiv},
+       eprint = {1606.07929},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJS..225...32B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{newton2016,
+       author = {{Newton}, Elisabeth R. and {Irwin}, Jonathan and {Charbonneau}, David and
+         {Berta-Thompson}, Zachory K. and {Dittmann}, Jason A. and
+         {West}, Andrew A.},
+        title = "{The Rotation and Galactic Kinematics of Mid M Dwarfs in the Solar Neighborhood}",
+      journal = {\apj},
+     keywords = {stars: kinematics and dynamics, stars: low-mass, stars: rotation, starspots, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = 2016,
+        month = apr,
+       volume = {821},
+       number = {2},
+          eid = {93},
+        pages = {93},
+          doi = {10.3847/0004-637X/821/2/93},
+archivePrefix = {arXiv},
+       eprint = {1511.00957},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJ...821...93N},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{newton2018,
+       author = {{Newton}, Elisabeth R. and {Mondrik}, Nicholas and {Irwin}, Jonathan and
+         {Winters}, Jennifer G. and {Charbonneau}, David},
+        title = "{New Rotation Period Measurements for M Dwarfs in the Southern Hemisphere: An Abundance of Slowly Rotating, Fully Convective Stars}",
+      journal = {\aj},
+     keywords = {stars: individual: Proxima Centauri, Wolf 359, GJ 1286, stars: low-mass, stars: rotation, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2018,
+        month = nov,
+       volume = {156},
+       number = {5},
+          eid = {217},
+        pages = {217},
+          doi = {10.3847/1538-3881/aad73b},
+archivePrefix = {arXiv},
+       eprint = {1807.09365},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018AJ....156..217N},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{newton2017,
+       author = {{Newton}, Elisabeth R. and {Irwin}, Jonathan and {Charbonneau}, David and
+         {Berlind}, Perry and {Calkins}, Michael L. and {Mink}, Jessica},
+        title = "{The H{\ensuremath{\alpha}} Emission of Nearby M Dwarfs and its Relation to Stellar Rotation}",
+      journal = {\apj},
+     keywords = {stars: activity, stars: low-mass, stars: rotation, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2017,
+        month = jan,
+       volume = {834},
+       number = {1},
+          eid = {85},
+        pages = {85},
+          doi = {10.3847/1538-4357/834/1/85},
+archivePrefix = {arXiv},
+       eprint = {1611.03509},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017ApJ...834...85N},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{rabus2019,
+       author = {{Rabus}, Markus and {Lachaume}, R{\'e}gis and {Jord{\'a}n}, Andr{\'e}s and
+         {Brahm}, Rafael and {Boyajian}, Tabetha and {von Braun}, Kaspar and
+         {Espinoza}, N{\'e}stor and {Berger}, Jean-Philippe and
+         {Le Bouquin}, Jean-Baptiste and {Absil}, Olivier},
+        title = "{A discontinuity in the T$_{eff}$-radius relation of M-dwarfs}",
+      journal = {\mnras},
+     keywords = {techniques: interferometric, stars: fundamental parameters, stars: late-type, stars: low-mass, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2019,
+        month = apr,
+       volume = {484},
+       number = {2},
+        pages = {2674-2683},
+          doi = {10.1093/mnras/sty3430},
+archivePrefix = {arXiv},
+       eprint = {1901.08077},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019MNRAS.484.2674R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @article{astropy2018,
     Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
