--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -7,7 +7,7 @@ Stars with significant convective envelopes ($\lesssim$ 1.3 M$_\odot$) have
 strong magnetic fields and slowly lose angular momentum via magnetic braking
 \citep[\eg][]{schatzman1962, weber1967, skumanich1972, kawaler1988,
 pinsonneault1989}.
-Although stars are born with random rotation periods, from 1 to 10 days,
+Although stars are born with random rotation periods, between 1 and 10 days,
 observations of young open clusters reveal that their rotation periods
 converge onto a unique sequence by $\sim$500-700 million years
 \citep[\eg][]{irwin2009, gallet2013}.
@@ -28,11 +28,12 @@ However, new photometric rotation periods made available by the \kepler\
 meibom2015, curtis2019} have revealed that rotational evolution is more
 complicated than previously thought.
 For example, the early-to-mid M dwarfs in the $\sim$ 650 Myr Praesepe cluster
-spin more slowly than the G dwarfs.
-In theory this is because lower-mass stars have deeper convections zones which
-generate stronger magnetic fields and more efficient magnetic braking.
-However, in the 1.1 Gyr NGC 6811 cluster \citep{janes2011}, late-K dwarfs
-rotate at the {\it same} rate as early-K dwarfs \citep{curtis2019}.
+spin more slowly than the G dwarfs; in theory because lower-mass stars have
+deeper convections zones which generate stronger magnetic fields and more
+efficient magnetic braking.
+However, in the NGC 6811 cluster which is around 1.1 Gyr \citep{janes2011},
+late-K dwarfs rotate at the {\it same rate} as early-K dwarfs
+\citep{curtis2019}.
 In other words, convection zone depth cannot be the only variable that affects
 stellar spin-down rate.
 New semi-empirical models that vary the rate of angular momentum
@@ -76,11 +77,10 @@ Although the cause of vertical dynamical heating is not well understood,
 interactions with giant molecular clouds, spiral arms and the galactic bar are
 thought to play an important role \citep[see][for a review of secular
 evolution in the MW]{sellwood2014}.
-Although the velocity of any individual star will only provide a weak age
-constraint because velocity is dependent on the position of a star in its
-orbit, the velocity {\it dispersion} of a {\it group} of stars can, in
-principle, average over this effect and indicate whether that group is old or
-young relative to other groups.
+The velocity of any individual star will only provide a weak age constraint
+because its velocity depends on its position in orbit, however the velocity
+{\it dispersion} of a {\it group} of stars will indicate whether that group is
+old or young relative to other groups.
 Vertical velocity dispersion is thought to increase monotonically with age.
 In this work we compare the velocity dispersions of groups of field stars in
 the Galactic thin disk to ascertain which groups are older and which younger
