--- a/paper/method.tex
+++ b/paper/method.tex
@@ -17,42 +17,67 @@ Bayestar dust map implemented in the {\tt dustmaps} {\it Python} package
 
 For this work, we used the precise \textit{Gaia} DR2 photometric color,
 $G_{\rm BP} - G_{\rm RP}$, to estimate \teff\ for the Kepler rotators.
-Curtis \etal\ (2020, in prep) combined \teff s for nearby, unreddened field
-stars from benchmark samples, including FGK stars characterized with
-high-resolution optical spectroscopy \citep{brewer2016}, M dwarfs
-characterized with low-resolution optical and near-infrared spectroscopy
-\citep{mann2015}, and K and M dwarfs characterized with interferometry and
-bolometric flux analyses \citep{boyajian2012}.
+Curtis \etal\ (2020, in prep) combined effective temperature measurements for
+nearby, unreddened field stars in benchmark samples, including FGK stars
+characterized with high-resolution optical spectroscopy \citep{brewer2016}, M
+dwarfs characterized with low-resolution optical and near-infrared
+spectroscopy \citep{mann2015}, and K and M dwarfs characterized with
+interferometry and bolometric flux analyses \citep{boyajian2012}.
 This empirical color--temperature relation is valid over the color range $0.55
 < (G_{\rm BP} - G_{\rm RP})_0 < 3.20$, corresponding to $6470 < T_{\rm eff} <
 3070$~K.
-The dispersion about the relation implies a high precision of 50~K. Using
-these benchmark data enable us to accurately estimate \teff\ for cool dwarfs
-\citep[\eg][]{rabus2019}, and allows to correct for interstellar reddening at
-all temperatures\footnote{The color--temperature relation is described in
+The dispersion about the relation implies a high precision of 50~K.
+These benchmark data enable us to accurately estimate \teff\ for cool dwarfs
+\citep[\eg][]{rabus2019}, and allows us to correct for interstellar reddening
+at all temperatures\footnote{The color--temperature relation is described in
 detail in the Appendix of, and the formula is provided in Table 4 of, Curtis
 \etal\ (2020, in prep).}.
-The equation we used to calculate photometric temperatures is,
-\begin{equation}
-    \mathrm{T_{eff}} = -416.585 + 39780.0C -84190.5C^2 + 85203.9C^3
-    -48225.9C^4 + 15598.5C^5 -2694.76C^6 + 192.865C^7,
-% Jason's updated parameters:
-% −416.585
-% 39780.0
-% −84190.5
-% 85203.9
-% −48225.9
-% 15598.5
-% −2694.76
-% 192.865
-    % \mathrm{T_{eff}} = 8960 -4802C + 1931C^2 -2446C^3 + 2669C^4 - 1324C^5 +
-    % 301C^6 - 26C^7,
-% 8959.8112335205078, -4801.5566310882568, 1931.4756631851196,
-%           -2445.9980716705322, 2669.0248055458069, -1324.0671020746231,
-%           301.13205924630165, -25.923997443169355]
-\label{eq:curtis}
-\end{equation}
-where C is \gaia\ \gcolor.
+The equation we used to calculate photometric temperatures from Gaia \gcolor\
+color is a seventh-order polynomial with coefficients given in table
+\ref{tab:coeffs}.
+% \ref{tab:coeffs}.
+% \begin{equation}
+%     \mathrm{T_{eff}} = a + bC cC^2 + dC^3
+%     eC^4 + 15598.5C^5 -2694.76C^6 + 192.865C^7,
+% % Jason's updated parameters:
+% % −416.585
+% % 39780.0
+% % −84190.5
+% % 85203.9
+% % −48225.9
+% % 15598.5
+% % −2694.76
+% % 192.865
+%     % \mathrm{T_{eff}} = 8960 -4802C + 1931C^2 -2446C^3 + 2669C^4 - 1324C^5 +
+%     % 301C^6 - 26C^7,
+% % 8959.8112335205078, -4801.5566310882568, 1931.4756631851196,
+% %           -2445.9980716705322, 2669.0248055458069, -1324.0671020746231,
+% %           301.13205924630165, -25.923997443169355]
+% \label{eq:curtis}
+% \end{equation}
+% where C is \gaia\ \gcolor and the coefficients are provided in table
+% \ref{coeffs}.
+\begin{table}[h!]
+  \begin{center}
+      \caption{
+          Coefficient values for a 7th-order polynomial used to estimate
+      \teff\ from \Gaia\ \gcolor\ color, calibrated in Curtis \etal\ (2020, in
+      prep).}
+    \label{tab:coeffs}
+    \begin{tabular}{l|c} % <-- Alignments: 1st column left and 2nd middle, with vertical lines in between
+      Exponent & Coefficient  \\
+      \hline
+      $0$ & -416.585 \\
+      $1$ & 39780.0  \\
+      $2$ & -84190.5 \\
+      $3$ & 85203.9  \\
+      $4$ & -48225.9 \\
+      $5$ & 15598.5  \\
+      $6$ & -2694.76 \\
+      $7$ & 192.865  \\
+    \end{tabular}
+  \end{center}
+\end{table}
 
 Photometric binaries and subgiants were removed from the sample by applying
 cuts to the color-magnitude diagram (CMD), shown in figure
@@ -60,7 +85,7 @@ cuts to the color-magnitude diagram (CMD), shown in figure
 A 6th-order polynomial was fit to the main sequence and raised by 0.27 dex to
 approximate the division between single stars and photometrci binaries.
 All stars above this line were removed from the sample.
-Subgiants were also removed by eliminating stars brighter than 6th magnitude
+Subgiants were also removed by eliminating stars brighter than 4th magnitude
 in \gaia\ G-band.
 
 The dwarf stars in the \mct\ sample are shown on a \gaia\ color-magnitude
@@ -79,9 +104,9 @@ Given that lower-mass stars stay active for longer than higher-mass stars
 rotation periods at old ages, the latter scenario seems more likely.
 An alternative explanation could be that the rotation periods of the oldest
 early M dwarfs are so long that they are not measurable with Kepler data.
-Ground-based rotation period measurements of mid and late M dwarfs
-indicate that there is an upper limit to the rotation periods of M
-dwarfs of around 140 days \citep{newton2017}, which is much longer than the
+Ground-based rotation period measurements of mid and late M dwarfs indicate
+that there is an upper limit to the rotation periods of M dwarfs of around 140
+days \citep{newton2016, newton2017, newton2018}, which is much longer than the
 longest rotation periods measured in the \mct\ sample (around 70 days).
 For this reason, it is likely that slowly rotating M dwarfs are missing from
 the \mct\ sample and this could be another reason for the lack of old M
