--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -95,7 +95,7 @@
     Elisabeth Newton$^5$,
     Jennifer van Saders$^6$,
     Dan Foreman-Mackey$^2$,
-    Lucy Lu$^3$,
+    Yuxi Lu$^1, 3$,
     Lauren Anderson$^8$}
 
 \altaffiltext{\amnh}{American Museum of Natural History, Central Park West,
